K1J-1777: Refactor message retrieval and related entities to improve clarity and consistency